FLAG-87: Upgrade POM to Platform 2.8.0 and Java 21 (Dependency Fix)