@@ -145,13 +145,19 @@
 				<version>${lombokVersion}</version>
 				<scope>provided</scope>
 			</dependency>
+			 <dependency>
+             <groupId>org.hibernate</groupId>
+             <artifactId>hibernate-core</artifactId>
+             <version>5.6.15.Final</version> 
+             <scope>provided</scope>
+          </dependency>
 		</dependencies>
 	</dependencyManagement>
 
 	<!-- default property values, required for eclipse build path configuration -->
 	<properties>
-		<openMRSVersion>2.2.0</openMRSVersion>
-		<openMRSMinorVersion>2.2</openMRSMinorVersion>
+		<openMRSVersion>2.8.0</openMRSVersion>
+		<openMRSMinorVersion>2.8</openMRSMinorVersion>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<uiframeworkVersion>3.11.0</uiframeworkVersion>
 		<metadatadeployVersion>1.8.1</metadatadeployVersion>
@@ -169,8 +175,8 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<configuration>
-						<target>1.8</target>
-						<source>1.8</source>
+						<target>21</target>
+						<source>21</source>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -238,16 +244,16 @@
 		</profile>
 
 		<profile>
-			<id>Java 17</id>
+			<id>Java 21</id>
 			<activation>
-				<jdk>17</jdk>
+				<jdk>21</jdk>
 			</activation>
 
 			<dependencies>
 				<dependency>
 					<groupId>com.thoughtworks.xstream</groupId>
 					<artifactId>xstream</artifactId>
-					<version>1.4.18</version>
+					<version>1.4.21</version>
 					<scope>provided</scope>
 				</dependency>
 			</dependencies>
@@ -257,10 +263,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.22.1</version>
-						<configuration>
-							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-						</configuration>
+						<version>3.2.5</version>
 					</plugin>
 				</plugins>
 			</build>
